variables.Variables.scala.error
Erreur de compilation :
Variables:1: error: not found: type int
var nbpas:int = 0;
          ^Variables:2: error: not found: type int
var pas:int =0;
        ^