variables.Variables.scala.code
var nbpas:int = 0;
var pas:int =0;
while (!estSurBiscuit){
  avance;
  nbpas=nbpas+1;}
prendBiscuit();
while (pas!=nbpas) {
  recule()
  pas=pas+1
}